# trovato

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
app/: __init__.py  config.py  desktop.py  main.py
app/api/: __init__.py
app/api/routes/: about.py  auth.py  backup.py  chat.py  diagnostics.py  documents.py  export.py  health.py  lmstudio.py  saved_searches.py  scan.py  search.py  settings.py  sources.py  tags.py  users.py
app/auth/: __init__.py  acl.py  rate_limit.py  security.py
app/backup/: __init__.py  service.py
app/chat/: __init__.py  rag.py
app/database/: __init__.py  engine.py
app/ingestion/: __init__.py  chunker.py  pdf_extractor.py  scanner.py  tables.py
app/ingestion/providers/: __init__.py  base.py  local.py  sftp.py  smb.py  webdav.py
app/llm/: __init__.py  lmstudio.py
app/models/: __init__.py  entities.py
app/ocr/: __init__.py  paddle.py  tesseract.py
app/services/: audit.py  compare.py  dashboard.py  diagnostics.py  exports.py  hardware.py  indexer.py  licensing.py  lms_cli.py  metrics.py  model_advisor.py  near_dup.py  page_matches.py  reranker.py  search_service.py  similar.py  sources.py  suggestions.py  tag_insights.py  tagging.py  updates.py  watcher.py
app/ui/: __init__.py  app_ui.py  components.py  styles.py  themes.py
app/ui/static/: viewer.js
app/utils/: hashing.py  i18n.py  keystore.py  logging.py  paths.py  secret_store.py  terms.py
app/vectorstore/: __init__.py  chroma_store.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  PRIVACY.md  ROADMAP.md  SECURITY.md
installer/: README.md  build.py  localdoc.iss  localdoc.spec  trovato.iss  trovato.spec
migrations/: README.md  env.py
migrations/versions/: 0001_initial_schema.py  0002_owner_acl.py
scripts/: _smoke_pages.py  backup.py  gen_keypair.py  gen_license.py  restore.py
tests/: conftest.py  test_acl.py  test_audit.py  test_auth.py  test_backup.py  test_chat_stream.py  test_chunker.py  test_chunker_props.py  test_data_dir_fallback.py  test_exports.py  test_fts_search.py  test_hardware.py  test_hashing.py  test_i18n.py  test_indexer_concurrency.py  test_indexer_phases.py  test_keystore_secrets.py  test_license_gate.py  test_licensing.py  test_llm_topics_backfill.py  test_lmstudio_extract.py  test_main_boot.py  test_media_auth.py  test_media_token.py  test_model_advisor.py  test_models.py  test_near_dup.py  test_page_render_and_matches.py  test_page_render_offline.py  test_rag_language_and_images.py  test_rag_library_overview.py  test_rag_retrieval.py  test_rate_limit.py  test_recover_flow.py  test_scan_queue.py  test_search_browse.py  test_search_facets.py  test_search_scoring.py  test_secret_store.py  test_security.py  (+9 more)
tests/e2e/: test_smoke.py
