[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "localdoc-intelligence"
version = "0.6.6"
description = "LocalDoc Intelligence — local PDF indexing, OCR, image analysis, semantic search and chat over your documents. 100% local via LM Studio."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Varous 555", email = "varous555@gmail.com" }
]
license = { text = "MIT" }
keywords = ["pdf", "rag", "ocr", "local-llm", "lm-studio", "semantic-search"]

dependencies = [
    # Web / API / UI
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "nicegui>=1.4.20",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1.2",
    "jinja2>=3.1.3",

    # Database
    "sqlmodel>=0.0.16",
    "sqlalchemy>=2.0.27",
    "alembic>=1.13.1",

    # Vector
    "chromadb>=0.4.24",

    # PDF / OCR / Images
    "pymupdf>=1.24.0",
    "pdfplumber>=0.11.0",
    "pytesseract>=0.3.10",
    "pillow>=10.2.0",
    "opencv-python-headless>=4.9.0.80",
    "numpy>=1.26.0",

    # HTTP / LLM
    "httpx>=0.27.0",
    "tenacity>=8.2.3",
    "tiktoken>=0.6.0",

    # Auth / security
    "argon2-cffi>=23.1.0",
    "cryptography>=42.0.5",

    # Config / utils
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.1",
    "loguru>=0.7.2",
    "watchfiles>=0.21.0",
    "humanize>=4.9.0",
    "zstandard>=0.22.0",
    "psutil>=5.9.8",
    "pywebview>=5.0",
    "smbprotocol>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "black>=24.2.0",
    "mypy>=1.8.0",
    "httpx>=0.27.0",
    "hypothesis>=6.99.0",
]
e2e = [
    "playwright>=1.42.0",
    "pytest-playwright>=0.4.0",
]
build = [
    "pyinstaller>=6.5.0",
]
postgres = [
    "psycopg[binary]>=3.1.18",
]
webdav = [
    "webdavclient3>=3.14.6",
]
sftp = [
    "paramiko>=3.4.0",
]
smb = [
    "smbprotocol>=1.13.0",
]
ocr-paddle = [
    "paddleocr>=2.7.0",
    "paddlepaddle>=2.6.0",
]

[project.scripts]
localdoc = "app.main:run"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W", "UP", "C4", "SIM"]
ignore = [
    "E501",   # line length — black handles it
    "B008",   # FastAPI / NiceGUI rely on function calls in defaults (Depends, Query)
    "UP042",  # str-enum migration; SQLModel needs the explicit str-mixin enums
    "SIM105", # contextlib.suppress is not always more readable than try/except/pass
    "SIM108", # if-else vs conditional expr is a style nit
    "SIM117", # nested-with — NiceGUI's layout builder requires nested context mgrs
    "B904",   # raise-from is over-strict for user-facing error handling
    "B007",   # unused loop control vars are sometimes documentation
    "E402",   # module imports — needed after pytest.importorskip()
    "E741",   # ambiguous variable names — `l`, `I` etc. are fine in maths
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B008", "E402"]

[tool.black]
line-length = 110
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q -m 'not e2e'"
markers = [
    "e2e: end-to-end browser tests (require Playwright)",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
